# src/main/java/com/mango/products/prices/infrastructure/PostgreSqlPriceRepository.java
@@ -105,4 +105,42 @@ public class PostgreSqlPriceRepository implements PriceRepository {
 
     return results.stream().findFirst();
   }
+
+  @Override
+  public List<Price> findPriceHistory(Id productId, Currency currency) {
+    String sql =
+        """
+        SELECT
+            id,
+            product_id,
+            price_amount,
+            price_currency,
+            init_date,
+            end_date
+        FROM product_prices
+        WHERE product_id = :productId
+          AND price_currency = :priceCurrency
+        ORDER BY init_date ASC
+        """;
+
+    var params =
+        new MapSqlParameterSource()
+            .addValue("productId", productId.value())
+            .addValue("priceCurrency", currency.value());
+
+    return jdbcTemplate.query(
+        sql,
+        params,
+        (rs, rowNum) -> {
+          var id = new Id(rs.getObject("id", UUID.class));
+          var pId = new Id(rs.getObject("product_id", UUID.class));
+          var amount = rs.getBigDecimal("price_amount");
+          var curr = Currency.from(rs.getString("price_currency"));
+          var initDate = rs.getDate("init_date").toLocalDate();
+          var endDateSql = rs.getDate("end_date");
+          var endDate = endDateSql != null ? endDateSql.toLocalDate() : null;
+          return Price.create(
+              id, pId, new Money(amount, curr), new ValidityPeriod(initDate, endDate));
+        });
+  }
 }
